# OCvidia

./: .gitmodules  CMakeLists.txt
.github/workflows/: windows-build.yml
src/: main.cpp
